test_regress/t/t_interface_colon_bad.out
%Error: t/t_interface_colon_bad.v:14:7: Package/class for ':: reference' not found: 'iface'
   14 |       iface::func();   
      |       ^~~~~
%Error: Exiting due to
